--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@ footer{
     <a class="btn" href="mailto:serenaeantoniosrls@gmail.com"><span class="dot"></span>Email aziendale</a>
     <a class="btn" href="https://www.facebook.com/share/1EDMug2mr1/" target="_blank" rel="noopener"><span class="dot"></span>Facebook</a>
     <a class="btn" href="https://www.linkedin.com/in/serena-palombi-4a78a4b9" target="_blank" rel="noopener"><span class="dot"></span>LinkedIn</a>
+
+    <!-- NUOVI CAMPI -->
+    <a class="btn" href="https://opexis.digital/?ref=32" target="_blank" rel="noopener"><span class="dot"></span>I nostri Servizi</a>
+    <a class="btn" href="https://opexis.digital/prodotto/aboutme-ai-card-personalizzazione-nome/?ref=32" target="_blank" rel="noopener"><span class="dot"></span>About Me AI Card</a>
+
     <button class="btn" onclick="saveContact()"><span class="dot"></span>Salva in rubrica</button>
   </div>
 </section>
@@ -262,6 +267,8 @@ EMAIL;TYPE=WORK:serenaeantoniosrls@gmail.com
 ORG:SERENA & ANTONIO SRLS
 ADR;TYPE=WORK:;;Via Salvo D’Acquisto 40;Guidonia Montecelio;RM;00012;Italia
 NOTE:P.IVA 16662561006
+URL:https://opexis.digital/?ref=32
+URL:https://opexis.digital/prodotto/aboutme-ai-card-personalizzazione-nome/?ref=32
 X-SOCIALPROFILE;TYPE=facebook:https://www.facebook.com/share/1EDMug2mr1/
 X-SOCIALPROFILE;TYPE=linkedin:https://www.linkedin.com/in/serena-palombi-4a78a4b9
 END:VCARD`;
