--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ body{
   justify-content:center;
   align-items:center;
 }
+
 body::before{
   content:"";
   position:fixed;
@@ -42,12 +43,22 @@ body::before{
   z-index:1;
 }
 
-header{display:flex;align-items:center;gap:10px;}
+header{
+  display:flex;
+  align-items:center;
+  gap:10px;
+}
 .logo{
   width:42px;height:42px;border-radius:50%;
   background:var(--blue);
   display:flex;align-items:center;justify-content:center;
   font-weight:800;
+}
+header div span:first-child{
+  font-size:14px;font-weight:700;letter-spacing:.08em;
+}
+header div span:last-child{
+  font-size:11px;color:#c2d4ff;
 }
 
 .card{
@@ -56,13 +67,19 @@ header{display:flex;align-items:center;gap:10px;}
   border-radius:18px;
   padding:12px;
 }
-.card h2{font-size:14px;margin-bottom:6px;}
-.card .meta{font-size:12px;margin-bottom:10px;line-height:1.5;}
+.card h2{
+  font-size:14px;margin-bottom:6px;
+}
+.card .meta{
+  font-size:12px;margin-bottom:10px;
+  line-height:1.5;
+}
 .card a{color:#d1e3ff;text-decoration:none}
 
 .profile-photo{
   float:right;
-  width:78px;height:78px;
+  width:78px;
+  height:78px;
   border-radius:50%;
   object-fit:cover;
   margin:0 0 8px 10px;
@@ -88,7 +105,10 @@ header{display:flex;align-items:center;gap:10px;}
   text-decoration:none;
   cursor:pointer;
 }
-.dot{width:9px;height:9px;border-radius:50%;background:#fff;}
+.dot{
+  width:9px;height:9px;border-radius:50%;
+  background:#fff;
+}
 
 .hero{text-align:center;}
 .hero h1{font-size:24px;margin:6px 0;}
@@ -125,56 +145,18 @@ video{width:100%;display:block;}
   text-decoration:none;
 }
 
+.socials{
+  display:flex;
+  gap:8px;
+  justify-content:center;
+  flex-wrap:wrap;
+}
+
 footer{
   margin-top:auto;
   text-align:center;
   font-size:10px;
   color:#94a3b8;
-}
-
-/* ===== GALLERIA LIGHTBOX ===== */
-.gallery-modal{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.85);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:9999;
-}
-.gallery-modal.is-open{display:flex;}
-.gallery-box{
-  width:min(520px, 95vw);
-  background:#000;
-  border-radius:16px;
-  overflow:hidden;
-}
-.gallery-box img{
-  width:100%;
-  max-height:65vh;
-  object-fit:contain;
-}
-.gallery-controls{
-  display:flex;
-  gap:8px;
-  padding:10px;
-}
-.gallery-controls button{
-  flex:1;
-  padding:10px;
-  border:none;
-  border-radius:999px;
-  background:#111;
-  color:#fff;
-  cursor:pointer;
-}
-.gallery-close{
-  position:absolute;
-  top:20px;
-  right:20px;
-  font-size:20px;
-  color:#fff;
-  cursor:pointer;
 }
 </style>
 </head>
@@ -185,34 +167,38 @@ footer{
 <header>
   <div class="logo">O</div>
   <div>
-    <strong>Opexis Digital</strong><br>
-    <small>Opportunity Nexus</small>
+    <span>Opexis Digital</span><br>
+    <span>Opportunity Nexus</span>
   </div>
 </header>
 
 <section class="card">
   <h2>SERENA PALOMBI</h2>
-  <img src="profilo.jpeg" class="profile-photo">
+
+  <img src="profilo.jpeg" alt="Serena Palombi" class="profile-photo">
 
   <div class="meta">
     <strong>CARD STANDARD</strong><br><br>
     Email: <a href="mailto:serena.palombi.88@gmail.com">serena.palombi.88@gmail.com</a><br>
-    Email azienda: <a href="mailto:serenaeantoniosrls@gmail.com">serenaeantoniosrls@gmail.com</a><br>
+    Email (azienda): <a href="mailto:serenaeantoniosrls@gmail.com">serenaeantoniosrls@gmail.com</a><br>
     Telefono: <a href="tel:+393935115026">3935115026</a>
   </div>
 
   <div class="actions">
     <a class="btn" href="tel:+393935115026"><span class="dot"></span>Chiama</a>
     <a class="btn" href="mailto:serena.palombi.88@gmail.com"><span class="dot"></span>Email</a>
+    <a class="btn" href="mailto:serenaeantoniosrls@gmail.com"><span class="dot"></span>Email Azienda</a>
 
-    <a class="btn" href="Presentazione Serena Palombi.pdf" download>
+    <a class="btn" href="https://www.facebook.com/share/1EDMug2mr1/" target="_blank"><span class="dot"></span>Facebook</a>
+    <a class="btn" href="https://www.linkedin.com/in/serena-palombi-4a78a4b9" target="_blank"><span class="dot"></span>LinkedIn</a>
+
+    <a class="btn" href="https://opexis.digital/?ref=32" target="_blank"><span class="dot"></span>I nostri Servizi</a>
+    <a class="btn" href="https://opexis.digital/prodotto/aboutme-ai-card-personalizzazione-nome/?ref=32" target="_blank"><span class="dot"></span>About Me AI Card</a>
+
+    <!-- DOWNLOAD CV -->
+    <a class="btn" href="Presentazione Serena Palombi.pdf" download="Serena_Palombi_CV.pdf">
       <span class="dot"></span>Scarica CV
     </a>
-
-    <!-- SOLO QUESTO È STATO AGGIUNTO -->
-    <button class="btn" onclick="openGallery()">
-      <span class="dot"></span>Galleria
-    </button>
 
     <button class="btn" onclick="saveContact()">
       <span class="dot"></span>Salva in rubrica
@@ -241,55 +227,57 @@ footer{
   <a href="ai.html">💬 Parla con l’AI</a>
 </section>
 
+<section class="socials">
+  <a class="btn" href="https://www.instagram.com/opexis.digital/" target="_blank"><span class="dot"></span>Opexis IG</a>
+  <a class="btn" href="https://www.facebook.com/profile.php?id=61580851595121" target="_blank"><span class="dot"></span>Opexis FB</a>
+  <a class="btn" href="https://www.linkedin.com/company/opexis/" target="_blank"><span class="dot"></span>LinkedIn</a>
+</section>
+
 <footer>
 © <span id="year"></span> Opexis Digital
 </footer>
 
 </div>
 
-<!-- MODAL GALLERIA -->
-<div id="galleryModal" class="gallery-modal">
-  <div class="gallery-close" onclick="closeGallery()">✕</div>
-  <div class="gallery-box">
-    <img id="galleryImage" src="1.jpeg">
-    <div class="gallery-controls">
-      <button onclick="prevImage()">←</button>
-      <button onclick="nextImage()">→</button>
-    </div>
-  </div>
-</div>
-
 <script>
 document.getElementById("year").textContent = new Date().getFullYear();
 
-const images=["1.jpeg","2.jpeg","3.jpeg","4.jpeg","5.jpeg","6.jpeg","7.jpeg","8.jpeg"];
-let currentIndex=0;
-
-function openGallery(){
-  document.getElementById("galleryModal").classList.add("is-open");
-  document.getElementById("galleryImage").src=images[currentIndex];
-}
-function closeGallery(){
-  document.getElementById("galleryModal").classList.remove("is-open");
-}
-function nextImage(){
-  currentIndex=(currentIndex+1)%images.length;
-  document.getElementById("galleryImage").src=images[currentIndex];
-}
-function prevImage(){
-  currentIndex=(currentIndex-1+images.length)%images.length;
-  document.getElementById("galleryImage").src=images[currentIndex];
-}
+const video = document.getElementById("introVideo");
 
 function enableAudio(){
-  const video=document.getElementById("introVideo");
-  video.muted=false;
+  video.muted = false;
+  video.volume = 1;
   video.play();
 }
+
 function stopVideo(){
-  const video=document.getElementById("introVideo");
   video.pause();
-  video.currentTime=0;
+  video.currentTime = 0;
+}
+
+function saveContact(){
+  const vcf=`BEGIN:VCARD
+VERSION:3.0
+FN:Serena Palombi
+N:Palombi;Serena;;;
+TITLE:CARD STANDARD
+TEL;TYPE=CELL:+393935115026
+EMAIL;TYPE=INTERNET:serena.palombi.88@gmail.com
+EMAIL;TYPE=INTERNET:serenaeantoniosrls@gmail.com
+URL:https://www.facebook.com/share/1EDMug2mr1/
+URL:https://www.linkedin.com/in/serena-palombi-4a78a4b9
+NOTE:CARD STANDARD | Opexis ref=32
+END:VCARD`;
+
+  const blob=new Blob([vcf],{type:"text/vcard"});
+  const url=URL.createObjectURL(blob);
+  const a=document.createElement("a");
+  a.href=url;
+  a.download="serena-palombi.vcf";
+  document.body.appendChild(a);
+  a.click();
+  a.remove();
+  URL.revokeObjectURL(url);
 }
 </script>
 
