--- a/ai.html
+++ b/ai.html
@@ -33,46 +33,29 @@
             height: 100dvh;
             background: #000000;
             overflow: hidden;
-
-            /* Safe-area (iPhone notch) */
-            padding-top: env(safe-area-inset-top);
-            padding-right: env(safe-area-inset-right);
-            padding-bottom: env(safe-area-inset-bottom);
-            padding-left: env(safe-area-inset-left);
         }
         
-        /* 
-           FIT (non-crop) su mobile: l'iframe resta SEMPRE completamente visibile.
-           - Se lo schermo è "più stretto" di 16:9 (tipico smartphone in verticale) → usa tutta la larghezza.
-           - Se lo schermo è "più largo" di 16:9 (desktop/landscape) → usa tutta l'altezza.
-        */
         iframe {
             position: absolute;
             top: 50%;
             left: 50%;
+            width: 177.78vh;
+            height: 100vh;
+            height: 100dvh;
+            min-width: 100vw;
+            min-height: 56.25vw;
+            transform: translate(-50%, -50%);
             border: none;
             background: #000000;
             filter: none;
-            transform: translate(-50%, -50%);
         }
 
-        /* Portrait / schermi stretti: usa tutta la larghezza, niente tagli */
-        @media (max-aspect-ratio: 16/9) {
-            iframe {
-                width: 100vw;
-                height: 56.25vw; /* 9/16 * 100 */
-                max-height: 100vh;
-                max-height: 100dvh;
-            }
-        }
-
-        /* Landscape / schermi larghi: usa tutta l'altezza, niente tagli */
         @media (min-aspect-ratio: 16/9) {
             iframe {
-                height: 100vh;
-                height: 100dvh;
-                width: 177.78vh; /* 16/9 * 100 */
-                max-width: 100vw;
+                width: 100vw;
+                height: 56.25vw;
+                min-width: auto;
+                min-height: auto;
             }
         }
     </style>
