--- a/ai.html
+++ b/ai.html
@@ -16,7 +16,7 @@
         
         html, body {
             width: 100%;
-            height: 92%;
+            height: 100%;
             overflow: hidden;
             background: #000000;
             position: fixed;
@@ -44,7 +44,7 @@
             height: 100dvh;
             min-width: 100vw;
             min-height: 56.25vw;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%) scale(0.92);
             border: none;
             background: #000000;
             filter: none;
@@ -70,4 +70,3 @@
     </main>
 </body>
 </html>
-
