--- a/ai.html
+++ b/ai.html
@@ -44,7 +44,7 @@
             height: 100dvh;
             min-width: 100vw;
             min-height: 56.25vw;
-            transform: translate(-50%, -50%) scale(0.92);
+            transform: translate(-50%, -50%);
             border: none;
             background: #000000;
             filter: none;
